--- a/src/main/webapp/inc/form.css
+++ b/src/main/webapp/inc/form.css
@@ -67,7 +67,7 @@ input[type=submit] {
 .flex_row_center{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
