--- a/src/main/webapp/inc/form.css
+++ b/src/main/webapp/inc/form.css
@@ -69,7 +69,7 @@ input[type=submit] {
     justify-content: center;
     flex: 30%;
     max-width: 30%;
-    
+    margin-top:10 px;
 }
 
 .flex_col_center{
@@ -101,6 +101,7 @@ input[type=submit] {
     flex-direction: row;
     justify-content: space-around;
     border: 1px black solid;
+    margin-top : 10px;
 }
 
 .disabledButton{
